[package]
name = "inline-const"
version = "0.1.0"

authors = ["Ralf Jung <post+crates@ralfj.de>"]
readme = "README.md"
repository = "https://github.com/RalfJung/inline-const"
description = "Inline consts implemented as a macro"
license = "MIT/Apache-2.0"

edition = "2018"

[build-dependencies]
autocfg = "1"

[dev-dependencies]
doc-comment = "0.3"
